--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
+    "name": "redstage/image-tool",
     "require": {
-        "guzzlehttp/guzzle": "~6.0",
         "monolog/monolog": "^1.24",
         "symfony/console": "^4.2",
         "symfony/dependency-injection": "^4.2"
