--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "symfony/console": "^4.2",
         "symfony/dependency-injection": "^4.2"
     },
+    "minimum-stability": "stable",
     "autoload":{
         "psr-4": {
             "Redstage\\Downloader\\": "app/code/Redstage/Downloader"
